--- a/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
+++ b/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
@@ -121,7 +121,7 @@
             </div>
         </form>
         <div class="charts" *ngIf="paramEvaluation !=''">
-            <app-chart-cardio [evaluation]="paramEvaluation" [protocolo]="protocolo"></app-chart-cardio>
+            <app-chart-cardio [evaluation]="paramEvaluation" [protocolo]="protocolo" [classe]="classe"></app-chart-cardio>
         </div>
     </div>
 
