--- a/src/app/commun/chart-cardio/chart-cardio.component.html
+++ b/src/app/commun/chart-cardio/chart-cardio.component.html
@@ -15,7 +15,7 @@
             [results]="multi">
     </ngx-charts-line-chart>
     <!-- VO2 -->
-    <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi2" [gradient]="gradient"
+    <ngx-charts-bar-vertical-2d [view]="view2" [scheme]="colorScheme" [results]="multi2" [gradient]="gradient"
       [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel2"
       [showYAxisLabel]="showYAxisLabel2" [xAxisLabel]="xAxisLabel2" [yAxisLabel]="yAxisLabel1"
       [legendPosition]=""  [barPadding]="barPadding"
