--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -1,5 +1,5 @@
 .container{
-    background-image: url("../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
+    background-image: url("./../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
     background-size: cover;
     background-position: center;
     height: 95vh;
