--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,6 +1,6 @@
 .container-fluid{
     position: relative;
-    background-image: url("../../../assets/img/samuel-girven-VJ2s0c20qCo-unsplash.jpg");
+    background-image: url("./../../../assets/img/samuel-girven-VJ2s0c20qCo-unsplash.jpg");
     background-repeat: no-repeat;
     background-blend-mode: normal;
     background-size: cover;
