--- a/src/app/prescription/pre-dash/pre-dash.component.scss
+++ b/src/app/prescription/pre-dash/pre-dash.component.scss
@@ -1,5 +1,5 @@
 .container{
-  background-image: url("../../../assets/img/mark-bertulfo-XKimW0pke6w-unsplash.jpg");
+  background-image: url("./../../../assets/img/mark-bertulfo-XKimW0pke6w-unsplash.jpg");
   background-size: cover;
   background-position: center;
 }
