--- a/src/app/register/new/new.component.scss
+++ b/src/app/register/new/new.component.scss
@@ -1,5 +1,5 @@
 .container {
-    background-image: url("../../../assets/img/trust-tru-katsande-Pu7BOaYlYGY-unsplash.jpg");
+    background-image: url("./../../../assets/img/trust-tru-katsande-Pu7BOaYlYGY-unsplash.jpg");
     background-repeat: no-repeat;
     background-blend-mode: normal;
     background-size: cover;
