--- a/src/app/reports/rep-dash/rep-dash.component.scss
+++ b/src/app/reports/rep-dash/rep-dash.component.scss
@@ -1,5 +1,5 @@
 .container{
-    background-image: url("../../../assets/img/humphrey-muleba-dDp-6pXrYik-unsplash.jpg");
+    background-image: url("./../../../assets/img/humphrey-muleba-dDp-6pXrYik-unsplash.jpg");
     background-size: cover;
     background-position: center;
     height: 95vh;
