--- a/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
+++ b/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
@@ -27,7 +27,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 0'</th>
+                        <th i18n>FC ao minuto 0</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min0}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min0}}</td>
                         <td *ngIf="addEval">
@@ -36,7 +36,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 1'</th>
+                        <th i18n>FC ao minuto 1</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min2}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min2}}</td>
                         <td *ngIf="addEval">
@@ -45,7 +45,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 2'</th>
+                        <th i18n>FC ao minuto 2</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min4}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min4}}</td>
                         <td *ngIf="addEval">
@@ -54,7 +54,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 3'</th>
+                        <th i18n>FC ao minuto 3</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min6}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min6}}</td>
                         <td *ngIf="addEval">
@@ -62,7 +62,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 4'</th>
+                        <th i18n>FC ao minuto 4</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min8}}</td>
                         <td *ngIf="addEval">
@@ -70,15 +70,15 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 5'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc2}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].fc2}}</td>
+                        <th i18n>FC ao minuto 5</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min10}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min10}}</td>
                         <td *ngIf="addEval">
-                            <input name="fc2" #fc2="ngModel" [(ngModel)]="newEvaluation.fc2" type="number" step="0.1">
+                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number" step="0.1">
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Minuto/FC 6'</th>
+                        <th i18n>FC ao minuto 6 (final)</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
@@ -108,7 +108,9 @@
                 </button>
             </div>
         </form>
-
+        <div class="charts" *ngIf="paramEvaluation !=''">
+            <app-chart-cardio [evaluation]="paramEvaluation" [protocolo]="protocolo" [classe]="classe"></app-chart-cardio>
+        </div>
     </div>
 
     <div class="footer">
