--- a/src/app/avaliation/CardioPulmunar/cureton/cureton.component.scss
+++ b/src/app/avaliation/CardioPulmunar/cureton/cureton.component.scss
@@ -3,3 +3,21 @@
     justify-content: start;
 }
 
+.section-info{
+    margin: auto;
+    margin-top: 20px;
+  }
+  
+  .mat-card{
+    padding: 20px;
+  }
+  
+  .mat-card-header{
+    justify-content: center;
+  }
+  
+  @media only screen and (min-width: 768px){
+    .section-info{
+      width: 60%;
+    }
+  }
