--- a/src/app/avaliation/CardioPulmunar/george/george.component.html
+++ b/src/app/avaliation/CardioPulmunar/george/george.component.html
@@ -19,40 +19,34 @@
                 <tbody>
                     <tr>
                         <th i18n>Tempo Final</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_tempo}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_tempo}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC Final</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicall}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicall}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].fc}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number"
-                                step="0.1">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n>Tempo</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
-                        <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>VO2</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
-                        <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
-                                step="0.1">
-                        </td>
-                    </tr>                  
+                        <td *ngIf="pointer>=1">{{getVO2(evaluation[pointer-1])}}</td>
+                        <td *ngIf="pointer>=0">{{getVO2(evaluation[pointer])}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr> 
+                    <tr>
+                        <th i18n>Classificação</th>
+                        <td *ngIf="pointer>=1">{{getClasse(evaluation[pointer-1])}}</td>
+                        <td *ngIf="pointer>=0">{{getClasse(evaluation[pointer])}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>                 
                     
                 </tbody>
             </table>
@@ -77,7 +71,19 @@
                 </button>
             </div>
         </form>
-
+        <div class="section-info">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Especificações</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
+                    <p><strong>Faixa etária:</strong> 18 a 29 anos.</p>
+                    <p><strong>Objetivo:</strong> Correr num ritmo confortável  e moderado com o tempo de prova de 8 minutos
+                         para homens e 9 minutos para mulher. A FC deve ser medida no final do teste e não deverá ultrapassar as 180bpm.</p>
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 
     <div class="footer">
