--- a/src/app/avaliation/CardioPulmunar/george2/george2.component.html
+++ b/src/app/avaliation/CardioPulmunar/george2/george2.component.html
@@ -37,39 +37,26 @@
                     </tr>
                     <tr>
                         <th i18n>Tempo</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_tempo}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].c_tempo}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>VO2</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
-                        <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
-                                step="0.1">
-                        </td>
+                        <td *ngIf="pointer>=1">{{getVO2(evaluation[pointer-1])}}</td>
+                        <td *ngIf="pointer>=0">{{getVO2(evaluation[pointer])}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>                  
                     <tr>
-                        <th i18n>Peso</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
-                        <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
-                                step="0.1">
-                        </td>
+                        <th i18n>Classificação</th>
+                        <td *ngIf="pointer>=1">{{getClasse(evaluation[pointer-1])}}</td>
+                        <td *ngIf="pointer>=0">{{getClasse(evaluation[pointer])}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr> 
-                    <tr>
-                        <th i18n>Sexo</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
-                        <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="texto">
-                        </td>
-                    </tr>                     
+                 
                 </tbody>
             </table>
 
@@ -93,7 +80,20 @@
                 </button>
             </div>
         </form>
-
+        <div class="section-info">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Especificações</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
+                    <p><strong>Faixa etária:</strong> 18 a 28 anos.</p>
+                    <p><strong>Objetivo:</strong> Este protocolo é constituido por um aquecimento de 3 minutos (caminhada rápida) e 
+                    em seguida ajusta-se a velocidade (auto selecionada) para correr num ritmo confortável entre 6.9 a 12Km/h, 
+                não ultrapassando os 10.4Km/h no caso de mulheres ou 12Km/h no caso de homens, por mais 3 minutos</p>
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 
     <div class="footer">
