--- a/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("../../../../assets/img/aval_caminhada.jpg");
+  background-image: url("./../../../../assets/img/aval_caminhada.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
   background-size: cover;
