--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("../../../../assets/img/aval_corrida.jpg");
+  background-image: url("./../../../../assets/img/aval_corrida.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
   background-size: cover;
