--- a/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.scss
@@ -1,5 +1,5 @@
 .container {
-    background-image: url("../../../../assets/img/swimming-unsplash.jpg");
+    background-image: url("./../../../../assets/img/swimming-unsplash.jpg");
     background-repeat: no-repeat;
     background-blend-mode: normal;
     background-size: cover;
