--- a/src/app/avaliation/anamenese/anamenese.component.scss
+++ b/src/app/avaliation/anamenese/anamenese.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("../../../assets/img/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
+  background-image: url("./../../../assets/img/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
   background-size: cover;
