--- a/src/app/avaliation/av-dash/av-dash.component.scss
+++ b/src/app/avaliation/av-dash/av-dash.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("../../../assets/img/measurement-1698856.jpg");
+  background-image: url("./../../../assets/img/measurement-1698856.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
   background-size: cover;
