--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -15,13 +15,13 @@
 
 
 table.front-view{
-    background-image: url("../../../assets/img/front_view.jpg");
+    background-image: url("./../../../assets/img/front_view.jpg");
   }
 table.side-view{
-    background-image: url("../../../assets/img/side_view.jpg");
+    background-image: url("./../../../assets/img/side_view.jpg");
   }
 table.back-view{
-    background-image: url("../../../assets/img/back_view.jpg");
+    background-image: url("./../../../assets/img/back_view.jpg");
   }
 table{
   background-repeat: no-repeat;
