--- a/src/app/avaliation/composicao-corporal/cc.component.scss
+++ b/src/app/avaliation/composicao-corporal/cc.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("../../../assets/img/dobras1.jpg");
+  background-image: url("./../../../assets/img/dobras1.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
   background-size: cover;
