--- a/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.scss
+++ b/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("../../../../assets/img/fezbot2000-smWTOhdPvJc-unsplash.jpg");
+  background-image: url("./../../../../assets/img/fezbot2000-smWTOhdPvJc-unsplash.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
   background-size: cover;
