--- a/src/app/avaliation/risco/rdc/rdc.component.scss
+++ b/src/app/avaliation/risco/rdc/rdc.component.scss
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 768px){
     .container {
-        background-image: url("../../../../assets/img/CON 012.JPG");
+        background-image: url("./../../../../assets/img/CON 012.JPG");
         background-repeat: no-repeat;
         background-blend-mode: normal;
         background-size: cover;
