--- a/src/app/commun/chart-cardio/chart-cardio.component.html
+++ b/src/app/commun/chart-cardio/chart-cardio.component.html
@@ -1,6 +1,7 @@
 <div class="charts">
     <!-- FC -->
-    <ngx-charts-line-chart 
+    <ngx-charts-line-chart
+            *ngIf="showLineChart" 
             [view]="view" 
             [scheme]="colorScheme" 
             [legend]="legend" 
