--- a/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
+++ b/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
@@ -4,6 +4,8 @@
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
+            <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
+            <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -19,20 +21,18 @@
                 <tbody>
                     <tr>
                         <th i18n>Distância</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].distancia}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].distancia}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
-                                step="0.1">
+                            <input name="distancia" #distancia="ngModel" [(ngModel)]="newEvaluation.distancia" type="number"
+                                step="0.1" placeholder="metros">
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>Resultado</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
-                        <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="text">
-                        </td>
+                        <th i18n>Classificação</th>
+                        <td *ngIf="pointer>=1">{{getClassificacao(evaluation[pointer-1])}}</td>
+                        <td *ngIf="pointer>=0">{{getClassificacao(evaluation[pointer])}}</td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>                                       
                 </tbody>
             </table>
@@ -57,7 +57,18 @@
                 </button>
             </div>
         </form>
-
+        <div class="section-info">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Especificações</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <p><strong>Destinado a: </strong> Não definido.</p>
+                    <p><strong>Faixa etária:</strong> Não definida</p>
+                    <p><strong>Objetivo:</strong> Nadar a maior distância possivél 12 minutos, nadando crawl na piscina.</p>
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 
     <div class="footer">
