--- a/src/app/avaliation/CardioPulmunar/natacao/natacao.component.scss
+++ b/src/app/avaliation/CardioPulmunar/natacao/natacao.component.scss
@@ -1,4 +1,23 @@
 .section{
- flex-direction: column;
- justify-content: start;
-}
+    flex-direction: column;
+    justify-content: start;
+  }
+  
+  .section-info{
+    margin: auto;
+    margin-top: 20px;
+  }
+  
+  .mat-card{
+    padding: 20px;
+  }
+  
+  .mat-card-header{
+    justify-content: center;
+  }
+  
+  @media only screen and (min-width: 768px){
+    .section-info{
+      width: 60%;
+    }
+  }
