--- a/src/app/avaliation/CardioPulmunar/ymca/ymca.component.html
+++ b/src/app/avaliation/CardioPulmunar/ymca/ymca.component.html
@@ -4,6 +4,11 @@
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
+            <input type="hidden" name="nafs" #nafs="ngModel" [ngModel]="newEvaluation.nafs">
+            <input type="hidden" name="altura" #altura="ngModel" [ngModel]="newEvaluation.altura">
+            <input type="hidden" name="peso" #peso="ngModel" [ngModel]="newEvaluation.peso">
+            <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
+            <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -18,90 +23,90 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n>25W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <th i18n>FC com 25W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min0}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min0}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>50W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicall}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicall}}</td>
+                        <th i18n>FC com 50W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min2}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min2}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number"
+                            <input name="min2" #min2="ngModel" [(ngModel)]="newEvaluation.min2" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>75W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <th i18n>FC com 75W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min4}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min4}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>100W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <th i18n>FC com 100W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min6}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min6}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>125W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <th i18n>FC com 125W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min8}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="text">
+                            <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="text">
                         </td>
                     </tr> 
                     <tr>
-                        <th i18n>150W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
+                        <th i18n>FC com 150W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min10}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min10}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number"
+                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number"
                                 step="0.1">
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>175W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <th i18n>FC com 175W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min12}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min12}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>200W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <th i18n>FC com 200W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min14}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min14}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="text">
+                            <input name="min14" #min14="ngModel" [(ngModel)]="newEvaluation.min14" type="text">
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>225W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <th i18n>FC com 225W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min16}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min16}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number"
+                            <input name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number"
                                 step="0.1">
                         </td>
                     </tr>                  
                     <tr>
-                        <th i18n>250W/FC</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
+                        <th i18n>FC com 250W</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min18}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].min18}}</td>
                         <td *ngIf="addEval">
-                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="text">
+                            <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="text">
                         </td>
                     </tr>                        
                 </tbody>
@@ -127,7 +132,9 @@
                 </button>
             </div>
         </form>
-
+        <div class="charts" *ngIf="refresh">
+            <app-chart-cardio [evaluation]="evaluation" [protocolo]="protocolo"></app-chart-cardio>
+        </div>
     </div>
 
     <div class="footer">
